force-app/main/default/objects/ProductosContrt__c/ProductosContrt__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuración donde se indicarán los productos que están activos para realizar la contratación. En esta configuración se añadirán aquellos productos que siguen el patrón de gratuitos</description>
    <label>Productos a contratar</label>
</CustomObject>