force-app/main/default/objects/ProductosContrt__c/fields/IdProduct__c.field-meta.xml
<CustomField>
    <fullName>IdProduct__c</fullName>
    <label>Id Producto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>