force-app/main/default/objects/ProductosContrt__c/fields/NameProduct__c.field-meta.xml
<CustomField>
    <fullName>NameProduct__c</fullName>
    <label>Nombre Producto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>