force-app/main/default/objects/ProductosContrt__c/fields/SiemprePago__c.field-meta.xml
<CustomField>
    <fullName>SiemprePago__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check que indica si el producto es considerado siempre de pago o entra en el chequeo de los productos que son de pago o gratis</description>
    <label>Siempre de pago</label>
    <type>Checkbox</type>
</CustomField>