force-app/main/default/objects/ProductosContrt__c/fields/URLArriaga__c.field-meta.xml
<CustomField>
    <fullName>URLArriaga__c</fullName>
    <description>Url donde se encuentra la información del producto que se quiere contratar dentro de la web de Arriaga</description>
    <label>URLArriaga</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>