force-app/main/default/objects/ProductosContrt__c/fields/URLContratacion__c.field-meta.xml
<CustomField>
    <fullName>URLContratacion__c</fullName>
    <label>URL Pagina contratacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>